update example to use web-js

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,15 +21,9 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+body {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
 }
